# Prog5-linker

./: .gitignore  Makefile.am  Makefile.in  README  README.md  read_elf
Documentation/: Doxyfile
Documentation/html/: index.html
Examples_fusion/: Makefile  Makefile.in  config.status  fusion_result
Examples_fusion/.deps/: file2.Po
Examples_fusion/autom4te.cache/: output.1  requests  traces.1
Exemples_ELF32_Files/: example16.s  example6.s  example7.s  example8.s  example9.s
elf_lib/: Phase 2.c  Phase2.c  Phase2.h  elf_lib.c  elf_lib.h  elf_utils.c  elf_utils.h  elf_write.c  elf_write.h  fusion_reloc.c  fusion_reloc.h
elf_read/: elf_read.c
tests/: mem_content_section.sh  mem_fusion.sh  mem_headers.sh  mem_realocations.sh  mem_sections_headers.sh  mem_symbols.sh  test.sh  test_content_section.sh  test_headers.sh  test_realocations.sh  test_relocations.sh  test_section_headers.sh  test_symbols.sh
